--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                
                         'color-primary': '#B68C5A',
                     }
                 }
@@ -133,16 +133,109 @@
                     </ul>
                 </div>
                 <div class="navbar-end">
-                    <a class="btn bg-color-primary text-white font-semibold hover:bg-[#917048] duration-500">Free Consultation</a>
+                    <a class="btn bg-color-primary text-white font-semibold hover:bg-[#917048] duration-500">Free
+                        Consultation</a>
                 </div>
             </div>
         </nav>
 
         <!-- banner section -->
-        
+        <div class="rounded-lg">
+            <div class="hero" style="background-image: url(images/banner.png);">
+                <div class="hero-overlay bg-opacity-50"></div>
+                <div class="hero-content text-white text-center text-neutral-content">
+                    <div class="md:p-10 lg:p-20">
+                        <h1 class="mb-5 text-5xl lg:text-7xl font-extrabold font-garamond">We Provide Effective Legal
+                            Solutions</h1>
+                        <p class="mb-5 font-poppins">There are many variations of passages of Lorem Ipsum available, but
+                            the majority
+                            have suffered alteration in some form, by injected humour.</p>
+                        <div class="flex justify-center items-center gap-5">
+                            <input type="text" placeholder="Search your services"
+                                class="input input-bordered text-opacity-60 font-poppins w-full text-black max-w-xs" />
+                            <button
+                                class="btn bg-color-primary text-white font-semibold hover:bg-[#917048] duration-500 border-none font-poppins">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <main class="container mx-auto">
 
+        <!-- legal practice section -->
+        <section class="my-20">
+            <div class="text-center mb-5">
+                <h2 class="font-garamond text-4xl font-extrabold mb-4">The Legal Practice Area</h2>
+                <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour.</p>
+            </div>
+
+            <!-- legal practice card -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 divide-x divide-y">
+
+                <!-- first card -->
+                <div class="card rounded-none">
+                    <figure class="px-10 pt-10">
+                      <img src="images/business.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-2xl font-extrabold font-garamond">Business Law</h2>
+                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    </div>
+                  </div>
+                <!-- second card -->
+                <div class="card rounded-none bg-gradient-to-t from-[#F3F3F3] to-gray-100">
+                    <figure class="px-10 pt-10">
+                      <img src="images/criminal.png" alt="Shoes" class="" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-2xl font-extrabold font-garamond">Criminal Law</h2>
+                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    </div>
+                  </div>
+                <!-- third card -->
+                <div class="card rounded-none">
+                    <figure class="px-10 pt-10">
+                      <img src="images/child.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-2xl font-extrabold font-garamond">Child Support</h2>
+                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    </div>
+                  </div>
+                <!-- fourth card -->
+                <div class="card rounded-none">
+                    <figure class="px-10 pt-10">
+                      <img src="images/education.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-2xl font-extrabold font-garamond">Education Law</h2>
+                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    </div>
+                  </div>
+                <!-- fifth card -->
+                <div class="card rounded-none">
+                    <figure class="px-10 pt-10">
+                      <img src="images/divorce.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-2xl font-extrabold font-garamond">Divorce Law</h2>
+                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    </div>
+                  </div>
+                <!-- sixth card -->
+                <div class="card rounded-none">
+                    <figure class="px-10 pt-10">
+                      <img src="images/tax.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title text-2xl font-extrabold font-garamond">Tax Law</h2>
+                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    </div>
+                  </div>
+            </div>
+        </section>
     </main>
     <footer>
 
