--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             theme: {
                 extend: {
                     colors: {
-                
+
                         'color-primary': '#B68C5A',
                     }
                 }
@@ -167,7 +167,8 @@
         <section class="my-20">
             <div class="text-center mb-5">
                 <h2 class="font-garamond text-4xl font-extrabold mb-4">The Legal Practice Area</h2>
-                <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority
+                <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available,
+                    but the majority
                     have suffered alteration in some form, by injected humour.</p>
             </div>
 
@@ -177,63 +178,184 @@
                 <!-- first card -->
                 <div class="card rounded-none">
                     <figure class="px-10 pt-10">
-                      <img src="images/business.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/business.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title text-2xl font-extrabold font-garamond">Business Law</h2>
-                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <h2 class="card-title text-2xl font-extrabold font-garamond">Business Law</h2>
+                        <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="card-actions">
+                            <button><img src="images/Frame.png" alt=""></button>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <!-- second card -->
-                <div class="card rounded-none bg-gradient-to-t from-[#F3F3F3] to-gray-100">
+                <div class="card rounded-none bg-gradient-to-t from-gray-100 to-gray-50">
                     <figure class="px-10 pt-10">
-                      <img src="images/criminal.png" alt="Shoes" class="" />
+                        <img src="images/criminal.png" alt="Shoes" class="" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title text-2xl font-extrabold font-garamond">Criminal Law</h2>
-                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <h2 class="card-title text-2xl font-extrabold font-garamond">Criminal Law</h2>
+                        <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="card-actions">
+                            <button><img src="images/Frame.png" alt=""></button>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <!-- third card -->
                 <div class="card rounded-none">
                     <figure class="px-10 pt-10">
-                      <img src="images/child.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/child.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title text-2xl font-extrabold font-garamond">Child Support</h2>
-                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <h2 class="card-title text-2xl font-extrabold font-garamond">Child Support</h2>
+                        <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="card-actions">
+                            <button><img src="images/Frame.png" alt=""></button>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <!-- fourth card -->
                 <div class="card rounded-none">
                     <figure class="px-10 pt-10">
-                      <img src="images/education.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/education.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title text-2xl font-extrabold font-garamond">Education Law</h2>
-                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <h2 class="card-title text-2xl font-extrabold font-garamond">Education Law</h2>
+                        <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="card-actions">
+                            <button><img src="images/Frame.png" alt=""></button>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <!-- fifth card -->
                 <div class="card rounded-none">
                     <figure class="px-10 pt-10">
-                      <img src="images/divorce.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/divorce.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title text-2xl font-extrabold font-garamond">Divorce Law</h2>
-                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <h2 class="card-title text-2xl font-extrabold font-garamond">Divorce Law</h2>
+                        <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="card-actions">
+                            <button><img src="images/Frame.png" alt=""></button>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <!-- sixth card -->
                 <div class="card rounded-none">
                     <figure class="px-10 pt-10">
-                      <img src="images/tax.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/tax.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title text-2xl font-extrabold font-garamond">Tax Law</h2>
-                      <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <h2 class="card-title text-2xl font-extrabold font-garamond">Tax Law</h2>
+                        <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="card-actions">
+                            <button><img src="images/Frame.png" alt=""></button>
+                        </div>
                     </div>
-                  </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- client say section -->
+        <section class="my-20">
+            <div class="text-center mb-5">
+                <h2 class="font-garamond text-4xl font-extrabold mb-4">What Our Client Say</h2>
+                <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available,
+                    but the majority
+                    have suffered alteration in some form, by injected humour.</p>
+            </div>
+
+            <!-- client say carousel -->
+            <div class="carousel w-full">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="images/banner.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="images/banner.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="images/banner.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="images/banner.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- faq section -->
+        <section class="my-20">
+            <div class="text-center mb-5">
+                <h2 class="font-garamond text-4xl font-extrabold mb-4">Frequently Asked Any Questions</h2>
+                <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available,
+                    but the majority
+                    have suffered alteration in some form, by injected humour.</p>
+            </div>
+
+            <!-- faq container -->
+            <div class="flex flex-col md:flex-row justify-center items-center gap-7">
+                <div class="space-y-4 flex-1">
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">
+                            Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">
+                            Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content">
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-1">
+                    <img class="w-3/4" src="images/faq.png" alt="">
+                </div>
             </div>
         </section>
     </main>
