added contact section

--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@
                             Are application fee waivers available?
                         </div>
                         <div class="collapse-content">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour.</p>
                         </div>
                     </div>
                     <div class="collapse collapse-plus bg-base-200">
@@ -331,7 +332,8 @@
                             Are application fee waivers available?
                         </div>
                         <div class="collapse-content">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour.</p>
                         </div>
                     </div>
                     <div class="collapse collapse-plus bg-base-200">
@@ -340,7 +342,8 @@
                             Are application fee waivers available?
                         </div>
                         <div class="collapse-content">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour.</p>
                         </div>
                     </div>
                     <div class="collapse collapse-plus bg-base-200">
@@ -349,12 +352,93 @@
                             Are application fee waivers available?
                         </div>
                         <div class="collapse-content">
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered alteration in some form, by injected humour.</p>
                         </div>
                     </div>
                 </div>
                 <div class="flex-1">
                     <img class="w-3/4" src="images/faq.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- contact section -->
+        <section class="my-20">
+            <div class="text-center mb-5">
+                <h2 class="font-garamond text-4xl font-extrabold mb-4">Contact With Us</h2>
+                <p class="font-poppins text-[#707070]">There are many variations of passages of Lorem Ipsum available,
+                    but the majority
+                    have suffered alteration in some form, by injected humour.</p>
+            </div>
+
+            <!-- contact container -->
+            <div class="flex flex-col md:flex-row justify-center items-center gap-5">
+                <div class="grid grid-cols-2 divide-x divide-y flex-1">
+                    <div class=" bg-[#F3F3F3]">
+                        <figure class="px-3 pt-10 flex justify-center">
+                            <img src="images/location.png" alt="location" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title font-garamond font-bold text-xl">Address</h2>
+                            <p class="font-poppins text-[#707070]">A108 Adam Street, <br>
+                                New York, NY 535022</p>
+                        </div>
+                    </div>
+                    <div class=" bg-[#F3F3F3]">
+                        <figure class="px-3 pt-10 flex justify-center">
+                            <img src="images/call.png" alt="location" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title font-garamond font-bold text-xl">Call Us</h2>
+                            <p class="font-poppins text-[#707070]">+88 01750 00 00 00 <br>
+                                +88 01750 00 00 00</p>
+                        </div>
+                    </div>
+                    <div class=" bg-[#F3F3F3]">
+                        <figure class="px-3 pt-10 flex justify-center">
+                            <img src="images/email.png" alt="location" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title font-garamond font-bold text-xl">Email Us</h2>
+                            <p class="font-poppins text-[#707070]">info@gmail.com <br>
+                                info@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class=" bg-[#F3F3F3]">
+                        <figure class="px-3 pt-10 flex justify-center">
+                            <img src="images/time.png" alt="location" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title font-garamond font-bold text-xl">Address</h2>
+                            <p class="font-poppins text-[#707070]">Mon-Fri: 9AM to 5PM <br>
+                                Sunday: 9AM to 1 PM</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex-1">
+                    <form class="card-body space-y-6">
+                        <div class="form-control">
+                            <input type="text" placeholder="Your Name" class="input font-poppins text-[#F3F3F3] bg-[#F3F3F3]" required />
+                        </div>
+
+                        <div class="form-control">
+                            <input type="email" placeholder="Your Email" class="input font-poppins text-[#F3F3F3] bg-[#F3F3F3]" required />
+                        </div>
+
+                        <div class="form-control">
+                            <input type="text" placeholder="Subject" class="input font-poppins text-[#F3F3F3] bg-[#F3F3F3]" required />
+                        </div>
+
+                        <div class="form-control">
+                            <textarea class="textarea font-poppins text-[#F3F3F3] bg-[#F3F3F3]" placeholder="Your Message"></textarea>
+                        </div>
+
+                        <div class="form-control">
+                            <button class="btn bg-color-primary text-white font-semibold hover:bg-[#917048] duration-500">Send Message</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </section>
