--- a/index.html
+++ b/index.html
@@ -140,14 +140,15 @@
         </nav>
 
         <!-- banner section -->
-        <div class="rounded-lg">
-            <div class="hero" style="background-image: url(images/banner.png);">
-                <div class="hero-overlay bg-opacity-50"></div>
+        <div class="">
+            <div class="hero bg-center bg-cover bg-[url(./images/banner.png)] rounded-lg">
+                <div class="hero-overlay bg-[linear-gradient(45deg,rgba(0,0,0,0.1),rgba(0,0,0,0.4))] rounded-lg"></div>
                 <div class="hero-content text-white text-center text-neutral-content">
                     <div class="md:p-10 lg:p-20">
                         <h1 class="mb-5 text-5xl lg:text-7xl font-extrabold font-garamond">We Provide Effective Legal
                             Solutions</h1>
-                        <p class="mb-5 font-poppins">There are many variations of passages of Lorem Ipsum available, but
+                        <p class="mb-5 font-poppins w-2/3 mx-auto">There are many variations of passages of Lorem Ipsum
+                            available, but
                             the majority
                             have suffered alteration in some form, by injected humour.</p>
                         <div class="flex justify-center items-center gap-5">
@@ -272,25 +273,32 @@
             </div>
 
             <!-- client say carousel or slider -->
-            <div class="carousel">
+            <div class="carousel w-full">
                 <div id="slide1" class="carousel-item relative w-full">
-                    <img src="images/slider-1.jpg" class="w-full" />
+                    <img src="https://daisyui.com/images/stock/photo-1625726411847-8cbb60cc71e6.jpg" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full">
-                    <img src="images/slider-2.jpg" class="w-full" />
+                    <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
                     </div>
                 </div>
                 <div id="slide3" class="carousel-item relative w-full">
-                    <img src="images/slider-3.jpg" class="w-full" />
+                    <img src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
                     </div>
                 </div>
@@ -450,7 +458,7 @@
         </nav>
         <nav class="text-white">
             <header class="footer-title">Use-full Link</header>
-            <a class="link link-hover">About us</a>
+            <a class="link link-hover">About Us</a>
             <a class="link link-hover">Contact</a>
             <a class="link link-hover">Cases</a>
             <a class="link link-hover">Blog</a>
@@ -468,11 +476,15 @@
             <header class="footer-title">Subscribe</header>
             <fieldset class="form-control w-80">
                 <label class="label">
-                    <span class="label-text text-white">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</span>
+                    <span class="label-text text-white">Subscribe for our latest & Articles. We Won’t Give You Spam
+                        Mails</span>
                 </label>
                 <div class="join">
-                    <input type="text" placeholder="username@site.com" class="input text-black input-bordered join-item text-opacity-70" />
-                    <button class="btn bg-color-primary text-white font-semibold hover:bg-[#917048] duration-500 join-item border-none"><img src="images/Frame (2).svg" alt=""></button>
+                    <input type="text" placeholder="username@site.com"
+                        class="input text-black input-bordered join-item text-opacity-70" />
+                    <button
+                        class="btn bg-color-primary text-white font-semibold hover:bg-[#917048] duration-500 join-item border-none"><img
+                            src="images/Frame (2).svg" alt=""></button>
                 </div>
             </fieldset>
         </form>
