--- a/index.html
+++ b/index.html
@@ -274,34 +274,45 @@
 
             <!-- client say carousel or slider -->
             <div class="carousel w-full">
-                <div id="slide1" class="carousel-item relative w-full">
-                    <img src="https://daisyui.com/images/stock/photo-1625726411847-8cbb60cc71e6.jpg" class="w-full" />
+                <!-- first slider -->
+                <div id="slide1" class="carousel-item relative w-full bg-center bg-cover rounded-lg bg-[url(./images/slider-1.jpg)] py-10 md:h-[60vh]">
+                    <div class="flex flex-col justify-center items-center text-white space-y-4">
+                        <img src="images/Ellipse 1.png" alt="">
+                        <h4 class="font-garamond text-2xl font-extrabold">John Carry</h4>
+                        <h6 class="font-garamond opacity-90 ">UIX Designer</h6>
+                        <p class="font-poppins w-2/3 text-center opacity-70">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
                     </div>
-                </div>
-                <div id="slide2" class="carousel-item relative w-full">
-                    <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full" />
+                </div> 
+                <!-- second slider -->
+                <div id="slide2" class="carousel-item relative w-full bg-center bg-cover rounded-lg bg-[url(./images/slider-2.jpg)] py-10 md:h-[60vh]">
+                    <div class="flex flex-col justify-center items-center text-white space-y-4">
+                        <img src="images/Ellipse 1.png" alt="">
+                        <h4 class="font-garamond text-2xl font-extrabold">John Carry</h4>
+                        <h6 class="font-garamond opacity-90 ">UIX Designer</h6>
+                        <p class="font-poppins w-2/3 text-center opacity-70">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
                     </div>
-                </div>
-                <div id="slide3" class="carousel-item relative w-full">
-                    <img src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg" class="w-full" />
+                </div> 
+                <!-- third slider -->
+                <div id="slide3" class="carousel-item relative w-full bg-center bg-cover rounded-lg bg-[url(./images/slider-3.jpg)] py-10 md:h-[60vh]">
+                    <div class="flex flex-col justify-center items-center text-white space-y-4">
+                        <img src="images/Ellipse 1.png" alt="">
+                        <h4 class="font-garamond text-2xl font-extrabold">John Carry</h4>
+                        <h6 class="font-garamond opacity-90 ">UIX Designer</h6>
+                        <p class="font-poppins w-2/3 text-center opacity-70">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                    </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle">❮</a>
-                        <a href="#slide4" class="btn btn-circle">❯</a>
-                    </div>
-                </div>
-                <div id="slide4" class="carousel-item relative w-full">
-                    <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
                     </div>
-                </div>
+                </div> 
             </div>
         </section>
 
